# sgs

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
data/: D_3k_prover_dataset.json  D_3k_small_prover_dataset.json
scripts/: cispo_sgs.py  cispo_solver_only.py  ei_solver_only.py  sgs_frozen_conjecturer.py  sgs_no_guide.py  sgs_no_problem_conditioning.py  standard_sgs.py  test_sgs.py
sgs/data/: __init__.py  dataset_types.py  load_dataset.py
sgs/models/: __init__.py  model_types.py  query.py  query_local.py  query_server.py
sgs/models/guide/: __init__.py  llm_judge_guide.py
sgs/pipeline/: config.py  full_pipeline.py  pipeline_pv.py  step1_data_gen.py  step2_train.py
sgs/training/: __init__.py  custom_trainers.py  evaluate.py  train.py  train_local.py  training_types.py
sgs/utils/: __init__.py  experiment_utils.py  monitor.py  prompts.py  server.py
sgs/verification/: types.py  verify_client.py  verify_local.py  verify_server.py
sgs/verification/prover/: launch.py  summarize.py
sgs/verification/prover/algorithms/: base.py  rmax_tree_search.py
sgs/verification/prover/lean/: proof.py  verifier.py
sgs/verification/prover/workers/: data_loader.py  generator.py  search.py
